$Id$

2016-04-12  Alex Samorukov  <samm@os2.kiev.ua>

	scsiprint.cpp, smartd.cpp: workaround for the buggy ST8000NM0075/E001,
	request log page list with a fixed length (ticket #678).

2016-04-11  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: add Samsung SM863 series, ticket #681

2016-04-10  Christian Franke  <franke@computer.org>

	os_win32.cpp: Include also unknown and unsupported USB devices
	in device scan result.  Move USB device handling to new function.
	Add Windows Server 2016 to get_os_version_str().

	AUTHORS: Add Thomas Gatterweh.
	smartd.cpp: Check is_powered_down() also with '-n sleep'.

2016-04-10  Thomas Gatterweh  <thomas_gatterweh@hotmail.com>

	Prevent drive spin up by '-n standby' check on Windows (ticket #677):
	dev_interface.cpp, dev_interface.h:
	Add smart_device::is_powered_down().
	os_win32.cpp: Add win_ata_device::is_powered_down().  Open device
	without READ or WRITE access to prevent spin up.
	smartctl.cpp, smartd.cpp: Add check for is_powered_down().

2016-04-09  Christian Franke  <franke@computer.org>

	configure.ac, os_win32.cpp, smartd.8.in: Add NVMe DEVICESCAN
	support for Windows.

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Document NVMe
	support for Windows.

	nvmecmds.cpp, os_win32.cpp: Use NSID=0 for Identify Controller
	command.  This fixes NVMe access via Samsung driver on Windows.

2016-04-08  Christian Franke  <franke@computer.org>

	os_win.cpp: Add initial NVMe support for Windows.
	Successfully tested with Intel driver.
	Does not work with Samsung driver.

	Thanks to Minkyu Kim for testing.

2016-04-02  Christian Franke  <franke@computer.org>

	Fix memory leak if get_sat_device() is called with unknown 'type':
	scsiata.cpp: get_sat_device(): Delete 'scsidev' on error.
	dev_interface.h: Update documentation of get_sat_device().
	dev_interface.cpp: Fix use of get_sat_device().
	(All other uses of get_sat_device() are already sane).

	dev_interface.cpp, dev_interface.h: Add counter for objects derived