@@ -1,5 +1,10 @@
 $Id$
 
+2016-04-12  Douglas Gilbert  <dgilbert@interlog.com>
+
+	scsiprint.cpp: improve handling when no tape cartridge is
+	in the tape drive.
+
 2016-04-12  Alex Samorukov  <samm@os2.kiev.ua>
 
 	scsiprint.cpp, smartd.cpp: workaround for the buggy ST8000NM0075/E001,
